# AbccSpiAnalyzer

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  KnownLimitations.md  LICENSE.md  README.md  build_analyzer.py  check_commits.py  cross_compile.bat  make_release.py  py_requirements.txt
.github/workflows/: macos_build.yml  ubuntu_build.yml  windows_build.yml
debug/: README.txt
doc/: AdvancedSettings.xml
doc/abcc_log_file_examples/: README.txt
extras/: plot_csv_demo_pd.py
include/: AnalyzerSettings.h
plugins/OSX/: libAbccSpiAnalyzer.dylib
project/vs2012/: AbccSpiAnalyzer.rc  AbccSpiAnalyzer.vcxproj
project/vs2015/: AbccSpiAnalyzer.rc  AbccSpiAnalyzer.vcxproj
project/vs2017/: AbccSpiAnalyzer.rc  AbccSpiAnalyzer.vcxproj  resource.h
project/vs2019/: AbccSpiAnalyzer.rc  AbccSpiAnalyzer.vcxproj
project/vs2022/: AbccSpiAnalyzer.sln  AbccSpiAnalyzer.vcxproj  resource.h
project/xcode/AbccSpiAnalyzer.xcodeproj/: project.pbxproj
project/xcode/AbccSpiAnalyzer.xcodeproj/xcshareddata/xcschemes/: AbccSpiAnalyzer.xcscheme
source/: AbccCrc.cpp  AbccCrc.h  AbccLogFileParser.cpp  AbccLogFileParser.h  AbccSpiAnalyzer.cpp  AbccSpiAnalyzer.h  AbccSpiAnalyzerHelpers.cpp  AbccSpiAnalyzerHelpers.h  AbccSpiAnalyzerLookup.cpp  AbccSpiAnalyzerLookup.h  AbccSpiAnalyzerResults.cpp  AbccSpiAnalyzerResults.h  AbccSpiAnalyzerSettings.cpp  AbccSpiAnalyzerSettings.h  AbccSpiAnalyzerTypes.h  AbccSpiMetadata.h  AbccSpiSimulationDataGenerator.cpp  AbccSpiSimulationDataGenerator.h  abcc_td.h
source/abcc_abp/: abp.h  abp_add.h  abp_asm.h  abp_bac.h  abp_ccl.h  abp_cfn.h  abp_cipid.h  abp_cnt.h  abp_cop.h  abp_cpc.h  abp_cpn.h  abp_dev.h  abp_dpv0di.h  abp_dpv1.h  abp_eco.h  abp_ect.h  abp_eip.h  abp_eme.h  abp_epl.h  abp_er.h  abp_etn.h  abp_fsi.h  abp_fusm.h  abp_mdd.h  abp_mod.h  abp_mqtt.h  abp_nwccl.h  abp_nwcfn.h  abp_nwdpv1.h  abp_nwetn.h  abp_nwpnio.h  abp_opcua.h  abp_pnam.h  abp_pnio.h  abp_safe.h  abp_smtp.h  abp_soc.h  abp_src3.h  abp_sync.h  abp_time.h
vs2012/AbccSpiAnalyzer/: AbccSpiAnalyzer.vcxproj
